agent: choose the match, pin both generators, widen the wire with layers and the engine's scoreboard
MatchSetup queues the engine's own sandbox-load script against a chosen map so
the match becomes an experiment variable rather than the GUI document's unread
Java defaults (four opponents at Medium on a ten-player map), and Premain holds
the command channel shut until that match exists because starting one replaces
the game object a channel armed earlier would have been counting frames
against. EngineRandom now seeds java.lang.Math's lazily built holder as well as
the engine's own generator -- twelve engine call sites choose AI base sites,
site offsets and worker destinations through Math.random, which is why two runs
of one identical job specification returned "survived, four extractors, 66
credits a second" and "defeated, no extractors, no income" -- and reaching that
field needs --add-opens java.base/java.lang=ALL-UNNAMED, absent which it throws
instead of leaving a generator silently unpinned. Perception, TypeFlags and
StateStream widen the sample with four attack-layer predicates per type, three
per-entity layer states, and a per-player income/army-value/building-value
record read from the engine's statistic enum by constant name rather than
ordinal, while BuildOptions stops filtering actions in all three of its paths
because the discarded shape was the upgrade -- the engine models a convertTo as
a conversion, not a build -- and WireChecks pins every new record
byte-for-byte.